--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "imagemagick": "^0.1.3",
     "minimist": "^1.2.0",
     "q": "^1.0.1",
+    "q-map": "^0.2.0",
     "underscore": "^1.6.0",
     "xml2js": "^0.4.3"
   }
